--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
             </ul>
         </nav>
             <ul>
-                <li><a href="mailto:info@devstudio.com">
-                    <img src="./images/mail.svg" alt="Почта компании" />
-                </a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">
-                    <img src="./images/tel.svg" alt="Моб номер компании" />
-                </a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li>
+                    <a href="mailto:info@devstudio.com">
+                    <img src="./images/mail.svg" alt="Почта компании" /></a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">
+                    <img src="./images/tel.svg" alt="Моб номер компании" /></a>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
             </ul>
     </header> 
 
@@ -207,7 +209,7 @@
 
     <!-- Футер -->
     <footer>
-        <div>Web Studio</div>
+        <div><a href="./index.html">Web studio</a></div>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@example.com">info@example.com</a></p>
@@ -231,7 +233,7 @@
                 </li>
             </ul>
 
-            <p>2020 | Developed by GoIT Students </p>
+            <p>2020 | Developed by GoIT Students</p>
 
     </footer>
 </body>
